# AOC2023-Solutions

./: .clang-format  .clang-tidy  CMakeLists.txt  generator.hpp
01/: CMakeLists.txt  P01.cc  P02.cc  main.cc
02/: CMakeLists.txt  P01.cc  P02.cc
03/: CMakeLists.txt  P01.cc  P02.cc
04/: P01.cc  P02.cc
05/: CMakeLists.txt  P01.cc  P02.cc
06/: CMakeLists.txt  P01.cc
07/: CMakeLists.txt  P01.cc
1/: CMakeLists.txt
